Hopefully fixed overflowing width of big case study blocks in Edge

--- a/assets/scss/components/_case-study-block--large.scss
+++ b/assets/scss/components/_case-study-block--large.scss
@@ -152,7 +152,6 @@
       }
 
       #{$self}__content {
-        width: 100%;
         width: stretch;
         width: -moz-available;
         width: -webkit-fill-available;
